salesforce/main/default/objects/Opportunity/fields/FundOps_Deadline__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Deadline__c</fullName>
  <label>FundOps Deadline</label>
  <type>Date</type>
</CustomField>