salesforce/main/default/objects/Opportunity/fields/FundOps_Eligibility__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Eligibility__c</fullName>
  <label>FundOps Eligibility</label>
  <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Eligible</fullName><default>false</default></value><value><fullName>Potentially Eligible</fullName><default>false</default></value><value><fullName>Ineligible</fullName><default>false</default></value><value><fullName>Unknown</fullName><default>true</default></value></valueSetDefinition></valueSet>
</CustomField>