salesforce/main/default/objects/Opportunity/fields/FundOps_Inferred_Data__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <label>FundOps Inferred Data</label>
    <type>Checkbox</type>
</CustomField>