salesforce/main/default/objects/Opportunity/fields/FundOps_Last_Run_At__c.field-meta.xml
<CustomField>
    <label>FundOps Last Run At</label>
    <type>DateTime</type>
</CustomField>