salesforce/main/default/objects/Opportunity/fields/FundOps_Next_Action__c.field-meta.xml
<CustomField>
    <label>FundOps Next Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>