salesforce/main/default/objects/Opportunity/fields/FundOps_Opportunity_Type__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Opportunity_Type__c</fullName>
  <label>FundOps Opportunity Type</label>
  <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Grant</fullName><default>false</default></value><value><fullName>Corporate Sponsorship</fullName><default>false</default></value><value><fullName>Major Gift</fullName><default>false</default></value><value><fullName>Institutional Partnership</fullName><default>false</default></value><value><fullName>Government Funding</fullName><default>false</default></value><value><fullName>Research Partnership</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>