salesforce/main/default/objects/Opportunity/fields/FundOps_Program__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Program__c</fullName>
  <label>FundOps Program</label>
  <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Believe in Me</fullName><default>false</default></value><value><fullName>Cougs 4 Kids</fullName><default>false</default></value><value><fullName>iLevelUP</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>