salesforce/main/default/objects/Opportunity/fields/FundOps_Score__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Score__c</fullName>
  <label>FundOps Score</label>
  <type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>