salesforce/main/default/objects/Opportunity/fields/FundOps_Source_URL__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Source_URL__c</fullName>
  <label>FundOps Source URL</label>
  <type>Url</type><length>1000</length>
</CustomField>